<?xml version="1.0"?>
<package>
  <name>keyboardteleopjs</name>
  <version>0.2.0</version>
  <description>Keyboard teleoperation via Twist messages.</description>

  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <author email="rctoris@wpi.edu">Russell Toris</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/keyboardteleopjs</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/keyboardteleopjs/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/keyboardteleopjs</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>
